--- a/assets/css/scss/pages/_restaurant.scss
+++ b/assets/css/scss/pages/_restaurant.scss
@@ -36,6 +36,15 @@
   margin-top: -60px;
   border-radius: 50px 50px 0px 0px;
   background-color: $background-color-grey;
+  & > div {
+    opacity: 0;
+    @for $i from 1 through 5 {
+      &:nth-child(#{$i}) {
+        animation: showmenu $animdelay #{$i * 0.3}s ease-in forwards;
+      }
+    }
+  }
+
   @media screen and (min-width: $desktop) {
     display: flex;
     justify-content: space-around;
