--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,16 @@
     background-position: 0% 92%;
   }
 }
+@keyframes showmenu {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
 @keyframes checkiconshow {
   from {
     width: 0;
@@ -835,6 +845,24 @@ main .section3 {
   margin-top: -60px;
   border-radius: 50px 50px 0px 0px;
   background-color: #f6f6f6;
+}
+.menu > div {
+  opacity: 0;
+}
+.menu > div:nth-child(1) {
+  animation: showmenu 1500ms 0.3s ease-in forwards;
+}
+.menu > div:nth-child(2) {
+  animation: showmenu 1500ms 0.6s ease-in forwards;
+}
+.menu > div:nth-child(3) {
+  animation: showmenu 1500ms 0.9s ease-in forwards;
+}
+.menu > div:nth-child(4) {
+  animation: showmenu 1500ms 1.2s ease-in forwards;
+}
+.menu > div:nth-child(5) {
+  animation: showmenu 1500ms 1.5s ease-in forwards;
 }
 @media screen and (min-width: 992px) {
   .menu {
