Correction et ajustement du footer. Rajout d'une div sur les pages HTML. Animation du loader gênante sur le bouton de la section 1. Tentative de cacher l'animation après le chargement de la page

--- a/assets/css/scss/utils/_keyframes.scss
+++ b/assets/css/scss/utils/_keyframes.scss
@@ -120,6 +120,15 @@
 }
 
 // Fin de l'animation pour l'icône de validation
+
+@keyframes vanish {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0%;
+  }
+}
 /*
 translateY();
 translate3d(x,y,z);
