--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -28,6 +28,7 @@ h4 {
 a {
   text-decoration: none;
   color: white;
+  cursor: pointer;
 }
 
 p {
@@ -64,7 +65,7 @@ footer {
     border-radius: 50%;
     width: 300px;
     height: 300px;
-    animation: spin 3s linear infinite, fadeout 2.2s forwards;
+    animation: spin 3s linear infinite, fadeout 2.2s forwards, vanish 1s 6s ease-out forwards;
     z-index: 2;
   }
 }
