--- a/assets/css/scss/layouts/_footer.scss
+++ b/assets/css/scss/layouts/_footer.scss
@@ -8,21 +8,27 @@
     @include flexbox-columncenter;
   }
   @media screen and (min-width: $desktop) {
-    @include flexbox-rowcenter;
+    @include flexbox-columncenter;
     width: 100%;
     flex-wrap: wrap;
   }
-  .index-foot__logo {
-    width: 25%;
-    height: auto;
-    margin-bottom: 20px;
-    filter: invert(99%) sepia(36%) saturate(0%) hue-rotate(57deg)
-      brightness(112%) contrast(100%);
+  .logocontainer {
     @media screen and (min-width: $tablet) {
-      width: 50%;
+      width: 100%;
+      @include flexbox-rowcenter;
     }
-    @media screen and (min-width: $desktop) {
-      width: 76%;
+    .index-foot__logo {
+      width: 25%;
+      height: auto;
+      margin-bottom: 20px;
+      filter: invert(99%) sepia(36%) saturate(0%) hue-rotate(57deg)
+        brightness(112%) contrast(100%);
+      @media screen and (min-width: $tablet) {
+        width: 50%;
+      }
+      @media screen and (min-width: $desktop) {
+        width: 50%;
+      }
     }
   }
   .index-foot__link {
