Ajustement de la marge supérieure et modification de la taille du bouton retour pour la version desktop

--- a/assets/css/scss/pages/_restaurant.scss
+++ b/assets/css/scss/pages/_restaurant.scss
@@ -49,6 +49,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    margin-top: -221px;
   }
   .menu_maintitle {
     @include flexbox-rowcenter;
