--- a/assets/css/scss/layouts/_header.scss
+++ b/assets/css/scss/layouts/_header.scss
@@ -27,6 +27,9 @@
 .page-head_returnlink {
   color: black;
   cursor: pointer;
+  @media screen and (min-width: $desktop) {
+    font-size: 4.8rem;
+  }
 }
 
 // Code à réviser
