--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -1,16 +1,15 @@
 @font-face {
-  font-family: Shrikhand;
-  src: url(../../../fonts/Shrikhand/Shrikhand-Regular.ttf) format(truetype);
-  src: url(../../../fonts/Shrikhand/shrikhand-regular-webfont.woff) format(woff);
-  src: url(../../../fonts/Shrikhand/shrikhand-regular-webfont.woff2)
-    format(woff2);
+  font-family: "Shrikhand";
+  src: url("../fonts/Shrikhand/Shrikhand-Regular.ttf") format(truetype);
+  src: url("../fonts/Shrikhand/shrikhand-regular-webfont.woff") format(woff);
+  src: url("../fonts/Shrikhand/shrikhand-regular-webfont.woff2") format(woff2);
 }
 
 @font-face {
-  font-family: Roboto;
-  src: url(../../../fonts/Roboto/Roboto-Regular.ttf) format(truetype);
-  src: url(../../../fonts/Roboto/roboto-regular-webfont.woff);
-  src: url(../../../fonts/Roboto/roboto-regular-webfont.woff2);
+  font-family: "Roboto";
+  src: url("../fonts/Roboto/Roboto-Regular.ttf") format("truetype"),
+    url("../fonts/Roboto/roboto-regular-webfont.woff") format("woff"),
+    url("../fonts/Roboto/roboto-regular-webfont.woff2") format("woff2");
 }
 
 * {
@@ -32,7 +31,7 @@ a {
 }
 
 p {
-  font-family: Roboto;
+  font-family: "Roboto";
 }
 
 img {
@@ -65,7 +64,8 @@ footer {
     border-radius: 50%;
     width: 300px;
     height: 300px;
-    animation: spin 3s linear infinite, fadeout 2.2s forwards, vanish 1s 6s ease-out forwards;
+    animation: spin 3s linear infinite, fadeout 2.2s forwards,
+      vanish 1s 6s ease-out forwards;
     z-index: 2;
   }
 }
