--- a/assets/css/scss/components/_cards_section2.scss
+++ b/assets/css/scss/components/_cards_section2.scss
@@ -10,6 +10,11 @@
   box-shadow: $boxshadow-standard;
   border-radius: 15px;
   background-color: $background-color-grey;
+  transition: all 500ms ease-in-out;
+  &:hover {
+    background-color: $secondary-color;
+    transform: scale(1.1);
+  }
   @media screen and (min-width: $tablet) {
     width: 80%;
     position: relative;
