--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -46,7 +46,7 @@
     box-shadow: 5px 5px 8px 5px #dfdfdf;
     margin-bottom: 20px;
     @media screen and (min-width: $tablet) {
-      width: 30%;
+      width: 29%;
       @include flexbox-columncenter;
       flex-wrap: wrap;
       height: 85px;
@@ -66,14 +66,12 @@
       @include flexbox-columnstart;
       gap: 13px;
       @include text-shorten;
-      padding: 19px;
+      padding-top: 23px;
       p {
         @include text-shorten;
       }
     }
     .splitright {
-      top: 0px;
-      right: 0px;
       display: flex;
       overflow: hidden;
       height: 85px;
@@ -85,7 +83,7 @@
       font-size: $card-title;
       @media screen and (min-width: $tablet) {
         @include flexbox-columncenter;
-        font-size: 17px;
+        font-size: 13px;
         margin-bottom: 15px;
       }
     }
@@ -96,7 +94,7 @@
       margin-top: -15px;
       @media screen and (min-width: $tablet) {
         @include flexbox-columncenter;
-        font-size: 13px;
+        font-size: 10px;
       }
     }
     .card_price {
