--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,7 +479,7 @@ footer {
 }
 @media screen and (min-width: 576px) {
   .menu-card .card {
-    width: 30%;
+    width: 29%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -508,7 +508,7 @@ footer {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding: 19px;
+  padding-top: 23px;
 }
 .menu-card .card .splitleft p {
   overflow: hidden;
@@ -516,8 +516,6 @@ footer {
   white-space: nowrap;
 }
 .menu-card .card .splitright {
-  top: 0px;
-  right: 0px;
   display: flex;
   overflow: hidden;
   height: 85px;
@@ -534,7 +532,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 17px;
+    font-size: 13px;
     margin-bottom: 15px;
   }
 }
@@ -550,7 +548,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 13px;
+    font-size: 10px;
   }
 }
 .menu-card .card .card_price {
