--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -66,7 +66,11 @@
       @include flexbox-columnstart;
       gap: 13px;
       @include text-shorten;
-      padding-top: 23px;
+      padding: 19px;
+      @media screen and(min-width:$tablet) {
+        padding: 0;
+        padding-top: 9px;
+      }
       p {
         @include text-shorten;
       }
