--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -25,6 +25,7 @@ $background-color-grey: #f6f6f6;
 $background-color-darkgrey: #eaeaea;
 $footer-background: #353535;
 $button-color: #ff79da;
+$lightpurple:#e4d5f6;
 // Fin des variables pour les couleurs
 
 // Variables pour la police
