Ajustement cartes menu
Ajustement du texte dans les divs mais points de suspension difficiles à faire apparaître

--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -69,11 +69,9 @@
       padding: 19px;
       @media screen and(min-width:$tablet) {
         padding: 0;
+        padding-left: 19px;
         padding-top: 9px;
         flex-grow: 1;
-      }
-      p {
-        @include text-shorten;
       }
     }
     .splitright {
