--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -65,8 +65,12 @@
     .splitleft {
       @include flexbox-columnstart;
       gap: 13px;
-      @include text-shorten;
       padding: 19px;
+      overflow: hidden;
+      p {
+        @include text-shorten;
+        display: inline-block;
+      }
       @media screen and(min-width:$tablet) {
         padding: 0;
         padding-left: 19px;
@@ -86,6 +90,7 @@
       font-size: $card-title;
       @media screen and (min-width: $tablet) {
         @include flexbox-columncenter;
+        align-items: flex-start;
         font-size: 13px;
         margin-bottom: 15px;
       }
@@ -97,6 +102,7 @@
       margin-top: -15px;
       @media screen and (min-width: $tablet) {
         @include flexbox-columncenter;
+        align-items: flex-start;
         font-size: 10px;
       }
     }
