--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,3 @@
-@-webkit-keyframes displayheart {
-  from {
-    color: lightgray;
-  }
-  to {
-    color: #ff79da;
-  }
-}
 @keyframes displayheart {
   from {
     color: lightgray;
@@ -14,31 +6,12 @@
     color: #ff79da;
   }
 }
-@-webkit-keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
 @keyframes spin {
   0% {
     transform: rotate(0deg);
   }
   100% {
     transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes fadein {
-  0% {
-    opacity: 0.2;
-  }
-  50% {
-    opacity: 0.2;
-  }
-  100% {
-    opacity: 1;
   }
 }
 @keyframes fadein {
@@ -52,17 +25,6 @@
     opacity: 1;
   }
 }
-@-webkit-keyframes fadeout {
-  0% {
-    opacity: 1;
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 @keyframes fadeout {
   0% {
     opacity: 1;
@@ -72,17 +34,6 @@
   }
   100% {
     opacity: 0;
-  }
-}
-@-webkit-keyframes gradientshift {
-  0% {
-    background-position: 0% 92%;
-  }
-  50% {
-    background-position: 100% 9%;
-  }
-  100% {
-    background-position: 0% 92%;
   }
 }
 @keyframes gradientshift {
@@ -96,16 +47,6 @@
     background-position: 0% 92%;
   }
 }
-@-webkit-keyframes showmenu {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
 @keyframes showmenu {
   from {
     opacity: 0;
@@ -116,14 +57,6 @@
     transform: translateY(0px);
   }
 }
-@-webkit-keyframes checkiconshow {
-  from {
-    width: 0;
-  }
-  to {
-    width: 60px;
-  }
-}
 @keyframes checkiconshow {
   from {
     width: 0;
@@ -132,29 +65,12 @@
     width: 60px;
   }
 }
-@-webkit-keyframes checkiconrotate {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 @keyframes checkiconrotate {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes vanish {
-  from {
-    width: 100%;
-  }
-  to {
-    width: 0%;
-    z-index: -100;
   }
 }
 @keyframes vanish {
@@ -204,8 +120,7 @@ p {
 }
 
 img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 body {
@@ -216,8 +131,7 @@ body {
 header,
 main,
 footer {
-  -webkit-animation: fadein 3s;
-          animation: fadein 3s;
+  animation: fadein 3s;
 }
 
 #loader-container {
@@ -237,8 +151,7 @@ footer {
   border-radius: 50%;
   width: 300px;
   height: 300px;
-  -webkit-animation: spin 3s linear infinite, fadeout 2.2s forwards, vanish 1s 6s ease-out forwards;
-          animation: spin 3s linear infinite, fadeout 2.2s forwards, vanish 1s 6s ease-out forwards;
+  animation: spin 3s linear infinite, fadeout 2.2s forwards, vanish 1s 6s ease-out forwards;
   z-index: 2;
 }
 
@@ -262,8 +175,7 @@ footer {
   background: linear-gradient(120deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   transition: all 500ms ease-in-out;
   background-size: 400% 400%;
-  -webkit-animation: gradientshift 3s ease-in-out infinite;
-          animation: gradientshift 3s ease-in-out infinite;
+  animation: gradientshift 3s ease-in-out infinite;
 }
 .section1__searchbutton:hover {
   transform: scale(1.2);
@@ -485,8 +397,7 @@ footer {
 }
 .resto-prev__card .description__hearticon:hover i:last-child {
   display: block;
-  -webkit-animation: displayheart 1s ease-in-out forwards;
-          animation: displayheart 1s ease-in-out forwards;
+  animation: displayheart 1s ease-in-out forwards;
 }
 @media screen and (min-width: 576px) {
   .resto-prev__card .description__hearticon {
@@ -583,12 +494,10 @@ footer {
   }
 }
 .menu-card .card:hover .card_checkicon {
-  -webkit-animation: checkiconshow 0.4s ease-in-out forwards;
-          animation: checkiconshow 0.4s ease-in-out forwards;
+  animation: checkiconshow 0.4s ease-in-out forwards;
 }
 .menu-card .card:hover .card_checkicon > i {
-  -webkit-animation: checkiconrotate 0.4s ease-in-out forwards;
-          animation: checkiconrotate 0.4s ease-in-out forwards;
+  animation: checkiconrotate 0.4s ease-in-out forwards;
 }
 .menu-card .card .splitleft {
   display: flex;
@@ -596,10 +505,14 @@ footer {
   justify-content: flex-start;
   align-items: flex-start;
   gap: 13px;
+  padding: 19px;
+  overflow: hidden;
+}
+.menu-card .card .splitleft p {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  padding: 19px;
+  display: inline-block;
 }
 @media screen and (min-width: 576px) {
   .menu-card .card .splitleft {
@@ -626,6 +539,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    align-items: flex-start;
     font-size: 13px;
     margin-bottom: 15px;
   }
@@ -642,6 +556,7 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    align-items: flex-start;
     font-size: 10px;
   }
 }
@@ -680,12 +595,13 @@ footer {
   border-radius: 139px;
   box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
   background: #ff79da;
+  background: -moz-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+  background: -webkit-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   background: linear-gradient(120deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   transition: all 500ms ease-in-out;
   background-size: 400% 400%;
-  -webkit-animation: gradientshift 3s ease-in-out infinite;
-          animation: gradientshift 3s ease-in-out infinite;
+  animation: gradientshift 3s ease-in-out infinite;
 }
 .order_button:hover {
   transform: scale(1.2);
@@ -972,24 +888,19 @@ main .section3 {
   opacity: 0;
 }
 .menu > div:nth-child(1) {
-  -webkit-animation: showmenu 1500ms 0.3s ease-in forwards;
-          animation: showmenu 1500ms 0.3s ease-in forwards;
+  animation: showmenu 1500ms 0.3s ease-in forwards;
 }
 .menu > div:nth-child(2) {
-  -webkit-animation: showmenu 1500ms 0.6s ease-in forwards;
-          animation: showmenu 1500ms 0.6s ease-in forwards;
+  animation: showmenu 1500ms 0.6s ease-in forwards;
 }
 .menu > div:nth-child(3) {
-  -webkit-animation: showmenu 1500ms 0.9s ease-in forwards;
-          animation: showmenu 1500ms 0.9s ease-in forwards;
+  animation: showmenu 1500ms 0.9s ease-in forwards;
 }
 .menu > div:nth-child(4) {
-  -webkit-animation: showmenu 1500ms 1.2s ease-in forwards;
-          animation: showmenu 1500ms 1.2s ease-in forwards;
+  animation: showmenu 1500ms 1.2s ease-in forwards;
 }
 .menu > div:nth-child(5) {
-  -webkit-animation: showmenu 1500ms 1.5s ease-in forwards;
-          animation: showmenu 1500ms 1.5s ease-in forwards;
+  animation: showmenu 1500ms 1.5s ease-in forwards;
 }
 @media screen and (min-width: 992px) {
   .menu {
@@ -1039,8 +950,7 @@ main .section3 {
 .menu .maintitle_icon:hover i:last-child {
   display: block;
   cursor: pointer;
-  -webkit-animation: displayheart 1s ease-in-out forwards;
-          animation: displayheart 1s ease-in-out forwards;
+  animation: displayheart 1s ease-in-out forwards;
 }
 @media screen and (min-width: 576px) {
   .menu .maintitle_icon {
@@ -1063,4 +973,4 @@ main .section3 {
   .order {
     width: 100%;
   }
-}/*# sourceMappingURL=style.css.map */
+}
