Ajustement de la taille de la police selon les breakpoints

--- a/assets/css/scss/pages/_restaurant.scss
+++ b/assets/css/scss/pages/_restaurant.scss
@@ -10,6 +10,9 @@
     font-size: 1.8rem;
     position: absolute;
     left: 4%;
+    @media screen and(min-width:$tablet) {
+      font-size: 3rem;
+    }
   }
   .page-head_logo {
     width: 50%;
