--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -91,8 +91,11 @@
       @media screen and (min-width: $tablet) {
         @include flexbox-columncenter;
         align-items: flex-start;
-        font-size: 13px;
+        font-size: 14px;
         margin-bottom: 15px;
+      }
+      @media screen and (min-width: $desktop) {
+        font-size: 24px;
       }
     }
     .card_subtitle {
@@ -104,6 +107,9 @@
         @include flexbox-columncenter;
         align-items: flex-start;
         font-size: 10px;
+      }
+      @media screen and (min-width: $desktop) {
+        font-size: 18px;
       }
     }
     .card_price {
