--- a/assets/css/scss/utils/_variables.scss
+++ b/assets/css/scss/utils/_variables.scss
@@ -25,7 +25,7 @@ $background-color-grey: #f6f6f6;
 $background-color-darkgrey: #eaeaea;
 $footer-background: #353535;
 $button-color: #ff79da;
-$lightpurple:#e4d5f6;
+$lightpurple: #e4d5f6;
 // Fin des variables pour les couleurs
 
 // Variables pour la police
@@ -34,6 +34,10 @@ $title-size: 1.8rem;
 $title2-size: 1.5rem;
 $card-title: 1.3rem;
 $card-subtitle: 1.1rem;
+$card-title-tabletsize: 14px;
+$card-title-desktopsize: 21px;
+$card-subtitle-tabletsize: 10px;
+$card-sutitle-desktopsize: 16px;
 $buttontitle-size: 1rem;
 $description-size: 0.5rem;
 // penser à modifier le nom des variables. trop vague
