--- a/assets/css/scss/pages/_restaurant.scss
+++ b/assets/css/scss/pages/_restaurant.scss
@@ -26,7 +26,7 @@
 
 .picture {
   width: 100%;
-  height: auto;
+  height: 1080px;
 }
 
 // Fin de la partie pour l'image
@@ -51,6 +51,7 @@
   @media screen and (min-width: $desktop) {
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
     flex-wrap: wrap;
     margin-top: -413px;
   }
