--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -540,7 +540,7 @@ footer {
     justify-content: center;
     align-items: center;
     align-items: flex-start;
-    font-size: 10px;
+    font-size: 13px;
     margin-bottom: 15px;
   }
 }
@@ -562,7 +562,7 @@ footer {
     justify-content: center;
     align-items: center;
     align-items: flex-start;
-    font-size: 1 10px;
+    font-size: 13px;
   }
 }
 @media screen and (min-width: 992px) {
@@ -889,7 +889,17 @@ main .section3 {
 
 .picture {
   width: 100%;
-  height: 1080px;
+  height: auto;
+}
+@media screen and (min-width: 576px) {
+  .picture {
+    height: 522px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .picture {
+    height: 1080px;
+  }
 }
 
 .menu {
